# AgentOS

./: .dockerignore  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEV_STATUS.md  Dockerfile  GEMINI_REPORT.md  GEMINI_TASKS.md  LICENSE  README.md  README_EN.md  ROADMAP_DEFERRED.md  agentos_strategic_planning_report.md  auditReport.md  config_schema.py  docker-compose.yml  fix_quotes.py  main.py  mypy.ini  paths.py  pyproject.toml  requirements.txt  run_test.py  sonar-project.properties  start.py  test_a2a.py  test_mcp.py  test_smart_router.py  test_vision.py
.github/workflows/: ci.yml  release_audit.yml  security.yml
01_Kernel/: kernel.py  soul_generator.py
02_Memory/: bm25_index.py  chroma_provider.py  memory_manager.py
02_Memory/providers/: mem0_provider.py  sqlite.py
02_Memory_Context/: mem0_provider.py  memory_manager.py
03_Tool_Registry/: dispatch_protocol.md  package_manager.md
03_Tool_System/: catalog.py  installer.py  mcp_client.py  sandbox.py  sandbox_docker.py  sandbox_e2b.py  sandbox_subprocess.py  sys_tools.py  tool_system_architecture.md  truncator.py
04_Engine/: audit_trail.py  cost_guard.py  daily_feedback.py  engine.py  ensemble_router.py  event_trace.py  evolution_scheduler.py  evolver.py  gateway.py  injection_detector.py  lora_tuner.py  model_capabilities.json  model_router.py  npu_detector.py  otel_tracer.py  rate_limiter.py  router.py  simulator.py  state_machine.py  streamer.py  zero_trust.py
04_Sandbox_Execution/: sandbox_architecture.md  zero_resource_sandbox.md
05_24_7_Engine/: engine_architecture.md
05_Orchestrator/: a2a_bus.py  crewai_roles.py  sub_agents.py  task_planner.py
06_Embodiment/: browser_cdp.py  desktop_runtime.py  human_preview.py  semantic_vision.py
07_PKG/: decay_scheduler.py  graph_rag.py  knowledge_graph.py
08_Dashboard/: audit_trail.py  cli_commands.py  cli_dashboard.py  dashboard.py
08_Platform/dashboard/: server.py
08_Platform/dashboard/static/: app.js  index.html  styles.css
09_OS_Integration/: os_hook.py
10_Marketplace/: marketplace.py  rating_system.py  soul_gallery.py  store_manager.py
11_Sync_Handoff/: handoff_manager.py
config/: permissions.yaml  secret_loader.py
contracts/: auth.py  feature_flags.py  interfaces.py  protocol_gateway.py
docs/: AUDIT_EXECUTION_PLAN.md  GEMINI_EXECUTION_PLAN.md  ROADMAP_AUDIT_REPORT.md  SELF_AUDIT_ADVERSARIAL_CHALLENGES.md  plugin_dev_guide.md
docs/api/: 01_Kernel.html  02_Memory.html  03_Tool_System.html  04_Engine.html  05_Orchestrator.html  06_Embodiment.html  07_PKG.html  08_Dashboard.html  09_OS_Integration.html  10_Marketplace.html  11_Sync_Handoff.html  contracts.html  index.html  paths.html  search.js
docs/api/01_Kernel/: kernel.html  soul_generator.html
docs/api/02_Memory/: bm25_index.html  chroma_provider.html  memory_manager.html  providers.html
docs/api/02_Memory/providers/: mem0_provider.html  sqlite.html
docs/api/03_Tool_System/: catalog.html  installer.html  mcp_client.html  sandbox.html  sandbox_docker.html  sandbox_e2b.html  sys_tools.html  truncator.html
docs/api/04_Engine/: audit_trail.html  cost_guard.html  daily_feedback.html  engine.html  ensemble_router.html  event_trace.html  evolution_scheduler.html  evolver.html  gateway.html  injection_detector.html  lora_tuner.html  model_router.html  npu_detector.html  rate_limiter.html  router.html  simulator.html  state_machine.html  streamer.html  zero_trust.html
docs/api/05_Orchestrator/: a2a_bus.html  crewai_roles.html  sub_agents.html  task_planner.html
docs/api/06_Embodiment/: browser_cdp.html  desktop_runtime.html  human_preview.html  semantic_vision.html
docs/api/07_PKG/: decay_scheduler.html  graph_rag.html  knowledge_graph.html
docs/api/08_Dashboard/: audit_trail.html  cli_commands.html  cli_dashboard.html  dashboard.html
docs/api/09_OS_Integration/: os_hook.html
docs/api/10_Marketplace/: marketplace.html  rating_system.html  soul_gallery.html  store_manager.html
docs/api/11_Sync_Handoff/: handoff_manager.html
docs/api/contracts/: interfaces.html  protocol_gateway.html
docs/architecture/: 01_kernel_architecture.md  02_context_manager_prototype.py  02_memory_primitives.md  03_zero_compute_routing.md  06_native_computer_use.md
docs/en/: architecture.md  deployment.md
docs/project_history/: CLAUDE_HANDOFF.md  GEMINI_REPORT.md  GEMINI_TASKS.md
docs/reference/: k8s_deployment.md
examples/hello_plugin/: manifest.json  tool.py
onboarding/: wizard.py
platform/: messenger_telegram.py
platform/dashboard/: server.py
tests/: conftest.py  e2e_orchestrator_tests.py  e2e_test.py  test_a2a_bus.py  test_a2a_bus_extra.py  test_audit.py  test_config_validation.py  test_core.py  test_coverage_boost.py  test_coverage_boost2.py  test_coverage_boost3.py  test_coverage_boost4.py  test_embodiment.py  test_engine_core.py  test_engine_extra.py  test_engine_retry.py  test_kernel.py  test_kg.py  test_marketplace.py  test_mcp_client.py  test_phase6.py  test_pkg.py  test_router_coverage.py  test_sandbox_scan.py  test_sandbox_security.py  test_security.py  test_smart_router.py  test_zero_trust.py
utils/: secret_manager.py
