[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-base-os"
version = "4.0.0"
description = "Agent Base OS - The operating system layer for autonomous AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "WhileTrue247", email = "author@example.com" }
]
dependencies = [
    "PyYAML>=6.0.1",
    "python-telegram-bot>=21.1.1",
    "httpx>=0.27.0",
    "aiohttp>=3.9.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
