[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentos"
version = "5.0.0-alpha"
description = "AI Agent 作業系統級基礎設施平台 — 不是 APP，是 OS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AgentOS Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "networkx>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.40",
]
orchestration = [
    "langgraph>=0.2",
]
knowledge = [
    "neo4j>=5.20",
    "mem0ai>=0.1",
]
computer-use = [
    "playwright>=1.45",
    "pyautogui>=0.9",
]
training = [
    "peft>=0.12",
    "transformers>=4.44",
    "datasets>=3.0",
    "trl>=0.11",
]
telegram = [
    "python-telegram-bot>=21.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pyflakes>=3.0",
    "autoflake>=2.0",
    "bandit>=1.7",
]
all = [
    "agentos[llm,orchestration,knowledge,computer-use,telegram,dev]",
]

[project.scripts]
agentos = "main:main"

[project.urls]
Homepage = "https://github.com/whiletrue247/AgentOS"
Repository = "https://github.com/whiletrue247/AgentOS"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.pyflakes]
exclude = ["__pycache__", ".pytest_cache"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["__pycache__", ".pytest_cache", "tests"]
