[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentos"
version = "5.1.0"
description = "AI Agent 作業系統級基礎設施平台 — 不是 APP，是 OS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AgentOS Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.40",
]
orchestration = [
    "langgraph>=0.2",
]
knowledge = [
    "neo4j>=5.20",
    "mem0ai>=0.1",
]
# Phase 2: 向量記憶
vector = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
computer-use = [
    "playwright>=1.45",
    "pyautogui>=0.9",
]
training = [
    "peft>=0.12",
    "transformers>=4.44",
    "datasets>=3.0",
    "trl>=0.11",
]
telegram = [
    "python-telegram-bot>=21.0",
]
# Phase 5: E2B Cloud Sandbox
e2b = [
    "e2b-code-interpreter>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "pyflakes>=3.0",
    "autoflake>=2.0",
    "bandit[toml]>=1.7",
    "mypy>=1.10",
    "ruff>=0.5",
]
security = [
    "bandit[toml]>=1.7",
    "safety>=3.0",
]
all = [
    "agentos[llm,orchestration,knowledge,vector,computer-use,telegram,e2b,dev,security]",
]

[project.scripts]
agentos = "main:main"

[project.urls]
Homepage = "https://github.com/whiletrue247/AgentOS"
Repository = "https://github.com/whiletrue247/AgentOS"
Issues = "https://github.com/whiletrue247/AgentOS/issues"

# ============================================================
# Tool Configuration
# ============================================================

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["__pycache__", ".pytest_cache", "tests"]

[tool.bandit]
exclude_dirs = ["tests", "__pycache__"]
skips = ["B101"]  # assert 在測試中是正常的
# CI 使用 -ll (Medium+) 作為 Hard Fail 門檻
# 本地開發可用 bandit -r . -c pyproject.toml -f screen 檢查

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["__pycache__", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # line too long — 交給 line-length 控制

[tool.coverage.run]
source = ["01_Kernel", "02_Memory", "03_Tool_System", "04_Engine", "05_Orchestrator", "06_Embodiment", "07_PKG"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50  # B.3: 從 30% 提升至 50%，CI 覆蓋率回歸保護
